update exception handling, sort the swagger, document the error response